--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             de wireframe, les htmls et le Css !</p>
         
         </article>
+        
     </section>
 
     <section class="membre">
@@ -37,7 +38,7 @@
             </article>
         </a>
 
-        <a href="">
+        <a href="./Pages/CV_AMW.html">
             <article class="membre-droite">
                 <h2>Alicia Wolfer</h2>
             </article>
