--- a/Pages/CV_AMW.html
+++ b/Pages/CV_AMW.html
@@ -6,18 +6,24 @@
     <meta charset="UTF-8">
     <meta name="description" content="CV Alicia Maria WOLFER">
     <link href="style_del_CV.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title> Web Développeur </title>
   </head>
   <body>
     <header>
       <div class="row">
+        <div class="col-lg-2">
         <div id="img-cv">
-         <img src="./src/imagenes/Profil_AMW.jpg" nom=Profil_AMW.jpg>
+         <img src="../src/images/photo-cv-amw.jpg" nom=Profil_AMW.jpg>
         </div>
+      </div>
+      <div class="col-lg-"></div>
+      <div class="col-lg-8">
         <p class="main-description"> Passionné par les nouvelles technologies et Internet. <br/>
         J’ai valorisé mes compétences par une formation intensive en Web développement. <br/>
         Je souhaite à présent mettre ces compétences au service de la promotion d’une entreprise ou de ses besoins internes.
         </p>
+      </div>
      </div>
     </header>
 
@@ -36,7 +42,8 @@
           </ul>
         </article>
         <article>
-          <h1> Compétences techniques </h1>
+          <br/>
+          <h1> Compétences techniques </h1><br/>
         </article>
         <article class="Langages">
           <h3> <strong>Langages: </strong> </h3>
@@ -53,10 +60,11 @@
             <span >Php7-PDO</span>
           </div>
           <div>
-            <span >SQL</span>
+            <span >SQL</span> 
           </div>
         </article>
         <article class="Frameworks">
+          <br/>
           <h3> <strong>Frameworks:</strong> </h3>
           <div>
             <span >Bootstrap</span>
@@ -72,12 +80,14 @@
           </div>
         </article>
         <article class="CMS">
+          <br/>
           <h3> <strong>CMS:</strong> </h3>
           <div>
             <span >Wordpress</span>
           </div>
         </article>
         <article class="Systemes">
+          <br/>
           <h3><strong> Systèmes:</strong> </h3>
           <div>
             <span >Windows</span>
@@ -87,6 +97,7 @@
           </div>
         </article>
         <article class="Autre">
+          <br/>
           <h3> <strong>Autre:</strong> </h3>
           <div>
             <span>MariaDB</span>
@@ -202,23 +213,37 @@
     <!--Footer: Loisirs-->
     <footer>
       <article id="preference"class="loisir">
-        <h3>Loisir</h3>
+        <h1>Loisir</h1>
         <ul>
           <li> Voyager</li>
           <li> Films et séries sur l'historie</li>
           <li> Photos </li>
           <li> Écouter de la musique</li>
-          <li> Réunions de familie</li>
         </ul>
         <div>
-          <div>
+          <article class="Info">
             <p><a></a></p>
             <p><a></a></p>
             <p><a></a></p>
+            <br/>
+          <h1>Informations</h1>
+          <div class="row" >
+            <div class="col-lg-3">
+                <div >
+                    <a href="https://github.com/" class="btn btn-primary btn-round">GitHub</a>
+                        <p></p>
+                        
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div  >
+                    <a href="https://www.linkedin.com/in/wolfer-alicia-64292a207/" class="btn btn-primary btn-round">LinkedIn</a>
+                    <p></p>
+                        
+                </div>
+            </div>
           </div>
-          <div>
-            <button></button>
-          </div>
+          </article>
         </div>
       </article>
     </footer>
