modifications dans html et css

--- a/Pages/CV_AMW.html
+++ b/Pages/CV_AMW.html
@@ -19,7 +19,8 @@
       </div>
       <div class="col-lg-"></div>
       <div class="col-lg-8">
-        <p class="main-description"> Passionné par les nouvelles technologies et Internet. <br/>
+        <p class="main-description">   <strong>Web Développeur</strong> <br/>
+        Passionné par les nouvelles technologies et Internet. <br/>
         J’ai valorisé mes compétences par une formation intensive en Web développement. <br/>
         Je souhaite à présent mettre ces compétences au service de la promotion d’une entreprise ou de ses besoins internes.
         </p>
@@ -27,9 +28,10 @@
      </div>
     </header>
 
-    <main class="container">
+    <main class="container-cv">
+      <div class="row">
       <!--Section 1 : Côte Gauche -->
-      <div  class="Section-gauche">
+      <div  class="Section-gauche col-lg-3">
        <section>
         <article id="Personnelles" class="Coordonnees">
           <strong>Donnes Personnelles </strong>
@@ -43,10 +45,10 @@
         </article>
         <article>
           <br/>
-          <h1> Compétences techniques </h1><br/>
+          <h2> Compétences techniques </h2><br/>
         </article>
         <article class="Langages">
-          <h3> <strong>Langages: </strong> </h3>
+          <h4> <strong>Langages: </strong> </h3>
           <div>
             <span >HTML5</span>
           </div>
@@ -65,7 +67,7 @@
         </article>
         <article class="Frameworks">
           <br/>
-          <h3> <strong>Frameworks:</strong> </h3>
+          <h4> <strong>Frameworks:</strong> </h3>
           <div>
             <span >Bootstrap</span>
           </div>
@@ -81,14 +83,14 @@
         </article>
         <article class="CMS">
           <br/>
-          <h3> <strong>CMS:</strong> </h3>
+          <h4> <strong>CMS:</strong> </h4>
           <div>
             <span >Wordpress</span>
           </div>
         </article>
         <article class="Systemes">
           <br/>
-          <h3><strong> Systèmes:</strong> </h3>
+          <h4><strong> Systèmes:</strong> </h4>
           <div>
             <span >Windows</span>
           </div>
@@ -98,7 +100,7 @@
         </article>
         <article class="Autre">
           <br/>
-          <h3> <strong>Autre:</strong> </h3>
+          <h4> <strong>Autre:</strong> </h4>
           <div>
             <span>MariaDB</span>
           </div>
@@ -106,13 +108,13 @@
        </section>
       </div>
 
-      <div class="Section-droit">
+      <div class="Section-droit col-lg-9">
       <!--Section 2 : Formation -->
       <section>
         <div>
           <div>
-            <h1> Formations</h1>
-            <p> <strong>2018 – 2019 : Formation Web développeur chez REALISE</strong> <br/>
+            <h2> Formations</h2>
+            <p> <strong> 2020 – 2021 : Formation Web développeur.</strong> Réalise. Genève. Suisse <br/>
               Formation intensive théorique et pratique du Web développement. Installation <br/>
               d’un serveur Apache2 sous Linux et d’une base de données MariaDB.
             </p>
@@ -121,30 +123,44 @@
             <li> Projet de création d’une présentation personnelle web</li>
             <li>Compétences HTML5, CSS3</li>
             <li>Lien vers GitHub projet</li>
-            <li> Projet de création d’un jeu de morpion en ligne</li>
             <li>Compétences HTML5, CSS3, Javascript</li>
-            <li>Lien vers GitHub projet</li>
-            <li> Projet de réalisation d’un mini-facebook</li>
             <li>Compétences HTML5, CSS3, Php 7, PDO, base de données MariaDB</li>
-            <li>Lien vers GitHub projet</li>
           </ul>
           <div>
             <div>
-              <span><img> </span>
               <p> <span >Validation des compétences : autonomie, recherche et veille technologique,</span>
-                travail en équipe, environnement de développement Visual studio, Linux, gestion <br/>
-                de projet Agile.
+                travail en équipe, environnement de développement Visual studio, Linux, gestion de projet Agile.
               </p>
             </div>
           </div>
         </div>
+         <div>
+          <p> <strong>2016 – 2017 : Florida Education Institute. Miami. Florida. États-Unis</strong> </p>
+          <ul>
+            <li type="disc"> Diplôme en Codage Médical </li>
+            <li type="square">Medical Billing and Coding</li>
+          </ul>
+        </div>
         <div>
+          <p> <strong>2012 – 2014 : Cours de langue française</strong> </p>
+          <ul>
+            <li type="disc"> Attestation d’Études de niveau supérieur en Langue Française. Université de Genève. Genève. Suisse</li>
+            <li type="disc"> Diplôme d’Études en Langue Française DELF B2. Lyon. France</li>
+          </ul>        
+          <p> <strong>2011 – 2012 : Université de Genève. Genève. Suisse</strong> </p>
+          <ul>
+            <li type="disc"> Certificat de formation continue (CAS) en enseignement  </li>
+          </ul>
           <p> <strong>2000 – 2009 : Autonomie </strong> </p>
           <ul>
             <li type="disc"> Base de données  et Object Database Management System </li>
             <li type="disc"> Langage – SQL</li>
             <li type="disc"> Microsoft base de données à objets  </li>
           </ul>
+          <p> <strong>1998 – 1998 : Cours post gradué Microsoft Office ()</strong> </p>
+          <ul>
+            <li type="disc"> Certificat de formation continue en MSOffice</li>
+           </ul>
         </div>
         <div>
           <p> <strong>1997 – 2000 : Base de données relationnelle - Microsoft Access </strong> </p>
@@ -169,38 +185,33 @@
             <li type="square"> Programming languages – PL/1, ALGOL 60, FORTRAN, COBOL</li>
           </ul>
         </div>
-      </section>
-        <!--Section 3: Certifications -->
+      <!--Section 3: Expériences professionnelles -->
       <section>
-        <h1>Certifications</h1>
+        <h2> Expériences professionnelles</h2>
         <ul>
-          <li> <strong>1998 : </strong>Cours post gradué Microsoft Office (Certificat). Université de La Havane. Cuba</li>
-          <li> <strong>1986 :  </strong> Licence en Cybernétique mathématique (Computer Science). Université de La Havane. Cuba </li>
-          <li> <strong>1983 :  </strong> Etudes en Mathématiques appliquées à l’informatique. Université d’État d’Odessa. Ukraine (ancien URSS)</li>
+          <li>Stage web développeuse <br />
+              Réalise, Genève, Suisse</li>
+          <li><strong>Agent de numérisations</strong><br />
+              Centre de gestion électronique des documents (GED) de l’HG, Genève, Suisse</li>
+          <li><strong>Aide de bureau. Traitement des remises et des actes de défaut de biens</strong><br />
+              Administration fiscale cantonale. Département des finances et des ressources humaines, Genève, Suisse </li> 
+          <li><strong>Commise administrative</strong><br />
+              Rushmore Group LLC, Hialeah, Florida, États-Unis</li>
+          <li><strong>Helpdesk et formatrice en MSOffice (Word, Excel, PowerPoint, Outlook, Publisher) </strong><br />
+              Cercle féminin des Nations Unies (CFNU), Genève, Suisse</li>
+          <li><strong>Spécialiste des systèmes d'information de gestion des ressources humaines</strong><br />
+               Ministère nationale de la Construction, La Havane, Cuba </li>
+          <li> <strong>Chef du département d'informatique </strong><br />
+              Ministère de la Construction de Camaguey, Cuba</li>
+          <li> <strong>Administratrice de réseau informatique </strong><br />
+               Entreprise pétrolière, Camagüey, Cuba</li>
+          <li> <strong>Développement de logiciels et exploitation de systèmes informatiques </strong><br />
+               Entreprise informatique, Camagüey, Cuba</li>
         </ul>
       </section>
-      <!--Section 4: Expériences professionnelles -->
+      <!--Section 4: Langues-->
       <section>
-        <h1> Expériences professionnelles</h1>
-        <ul>
-          <li>Stage web développeuse </li>
-          <li>Spécialiste des comptes payables<br />
-            Rushmore Group LLC, Hialeah, Florida, États-Unis</li>
-          <li>Helpdesk et formatrice en MSOffice (Word, Excel, PowerPoint, Outlook, Publisher) </li>
-          <li> Cercle féminin des Nations Unies (CFNU), Genève, Suisse</li>
-          <li>Spécialiste des systèmes d'information de gestion des ressources humaines</li>
-          <li> Ministère nationale de la Construction, La Havane, Cuba </li>
-          <li> Chef du département d'informatique </li>
-          <li> Ministère de la Construction de Camaguey, Cuba</li>
-          <li> Administratrice de réseau informatique </li>
-          <li> Entreprise pétrolière, Camagüey, Cuba</li>
-          <li> Développement de logiciels et exploitation de systèmes informatiques </li>
-          <li> Entreprise informatique, Camagüey, Cuba</li>
-        </ul>
-      </section>
-      <!--Section 5: Langues-->
-      <section>
-        <h1>Langues</h1>
+        <h2>Langues</h2>
         <ul>
           <li> Espagnol : écrit, lu, parlé, technique </li>
           <li> Français : écrit, lu, parlé, technique</li>
@@ -208,12 +219,13 @@
         </ul>
       </section>
     </div>
+
     </main>
   </body>
     <!--Footer: Loisirs-->
     <footer>
       <article id="preference"class="loisir">
-        <h1>Loisir</h1>
+        <h2>Loisir</h2>
         <ul>
           <li> Voyager</li>
           <li> Films et séries sur l'historie</li>
@@ -226,7 +238,7 @@
             <p><a></a></p>
             <p><a></a></p>
             <br/>
-          <h1>Informations</h1>
+          <h2>Informations</h2>
           <div class="row" >
             <div class="col-lg-3">
                 <div >
